# chatlas

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: python-testing.yml
chatlas/: app.py  utils.py
chatlas/agent/: chatlas_df.py  chatlas_sql.py  graph.py
chatlas/data_prep/: activities.py  records.py  semantic.py
chatlas/prompts/: prompts.py  prompts_df.py  prompts_sql.py
examples/: getting_started.ipynb
notebooks/: explore_data.ipynb  load_langchain.ipynb
tests/: test_data_prep.py  test_data_prep_activities.py  test_data_prep_records.py  test_data_prep_semantic.py
